--- a/debian/control
+++ b/debian/control
@@ -11,8 +11,6 @@ XCS-Cross-Host-Build-Depends: debhelper (>= 4.0.0),
  libtool,
  xtrans-dev (>= 1.2.1-1.oi1)
 XCS-Cross-Build-Depends: x11proto-randr-dev (>= 1.2),
- libmd-dev (>= 0.3-0.oi2),
- libpixman-1-dev (>= 0.9.5),
  x11proto-render-dev (>= 2:0.9.3),
  x11proto-fixes-dev (>= 4.0),
  x11proto-core-dev (>= 7.0.13),
@@ -21,6 +19,8 @@ XCS-Cross-Build-Depends: x11proto-randr-dev (>= 1.2),
  x11proto-xcmisc-dev,
  x11proto-input-dev (>= 1.4.4),
  xtrans-dev (>= 1.2.1-1.oi1),
+ libmd-dev (>= 0.3-0.oi2),
+ libpixman-1-dev (>= 0.9.5)
 Build-Depends: debhelper (>= 4.0.0),
  xorg-utils-macros (>= 1.1.6-0.oi3),
  quilt,
@@ -29,9 +29,6 @@ Build-Depends: debhelper (>= 4.0.0),
  automake,
  libtool,
  x11proto-randr-dev (>= 1.2),
- xtrans-dev (>= 1.2.1-1.oi1),
- libmd-dev (>= 0.3-0.oi2),
- libpixman-1-dev (>= 0.9.5),
  x11proto-render-dev (>= 2:0.9.3),
  x11proto-fixes-dev (>= 4.0),
  x11proto-core-dev (>= 7.0.13),
@@ -39,7 +36,9 @@ Build-Depends: debhelper (>= 4.0.0),
  x11proto-damage-dev (>= 1.1),
  x11proto-xcmisc-dev,
  x11proto-input-dev (>= 1.4.4),
- xtrans-dev, 
+ xtrans-dev (>= 1.2.1-1.oi1),
+ libmd-dev (>= 0.3-0.oi2),
+ libpixman-1-dev (>= 0.9.5)
 Standards-Version: 3.7.3
 
 Package: xserver-xfbdev
