Added missing Build-Requires. Signed-off-by: Mikhail Gusarov <dottedmag@openinkpot.org>

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,8 @@ XCS-Cross-Build-Depends: x11proto-randr-dev (>= 1.2),
  x11proto-damage-dev (>= 1.1),
  x11proto-xcmisc-dev,
  x11proto-input-dev (>= 1.4.4),
+ x11proto-bigreqs-dev,
+ x11proto-resource-dev,
  xtrans-dev (>= 1.2.1-1.oi1),
  libmd-dev (>= 0.3-0.oi2),
  libpixman-1-dev (>= 0.9.5),
@@ -38,6 +40,8 @@ Build-Depends: debhelper (>= 4.0.0),
  x11proto-damage-dev (>= 1.1),
  x11proto-xcmisc-dev,
  x11proto-input-dev (>= 1.4.4),
+ x11proto-bigreqs-dev,
+ x11proto-resource-dev,
  xtrans-dev (>= 1.2.1-1.oi1),
  libmd-dev (>= 0.3-0.oi2),
  libpixman-1-dev (>= 0.9.5),
