--- a/debian/rules
+++ b/debian/rules
@@ -148,14 +148,12 @@ install: build
 	find $(CURDIR)/debian/tmp/usr/lib/xorg -type f -name '*.la' | \
 	  xargs rm -f
 
-# stub to start building deb files, used by binary-indep and binary-arch
-binary-initial:
+binary-arch: build install
 	dh_testdir
 	dh_testroot
-
-# stub to build deb files, used by binary-indep and binary-arch
-# (cf. /usr/share/debhelper/dh_make/debianm/rules)
-binary-deb:
+	dh_install --sourcedir=debian/tmp --list-missing
+	dh_link
+	dh_strip --dbg-package=xserver-xfbdev-dbg
 	dh_compress
 	dh_fixperms
 	dh_installdeb
@@ -164,21 +162,7 @@ binary-deb:
 	dh_md5sums
 	dh_builddeb
 
-# Build architecture-dependent files here.
-binary-arch: build install
-	$(MAKE) -f debian/rules DH_OPTIONS=-s binary-initial
 
-#	dh_installdocs -s
-#	dh_installchangelogs -s ChangeLog
-	dh_install -s --sourcedir=debian/tmp --list-missing
-#	dh_installdebconf -s
-#	dh_installman -s
-	dh_link -s
-	dh_strip -s --dbg-package=xserver-xfbdev-dbg
-	$(MAKE) -f debian/rules DH_OPTIONS=-s binary-deb
-
-
-# Build architecture-independent files here
 binary-indep:
 
 binary: binary-indep binary-arch
