--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ XCS-Cross-Build-Depends: x11proto-randr-dev (>= 1.2),
  libsha1-dev,
  libpixman-1-dev (>= 0.9.5),
  libxkbfile-dev,
- libxfont-dev
+ libxfont-dev (>= 1:1.4.0-3)
 Build-Depends: debhelper (>= 4.0.0),
  xorg-utils-macros (>= 1.1.6-0.oi3),
  quilt,
@@ -42,15 +42,15 @@ Build-Depends: debhelper (>= 4.0.0),
  x11proto-bigreqs-dev,
  x11proto-resource-dev,
  xtrans-dev (>= 1.2.1-1.oi1),
- libsha1-dev,
+ libsha1-dev (>= 0.2-3),
  libpixman-1-dev (>= 0.9.5),
  libxkbfile-dev,
- libxfont-dev,
+ libxfont-dev (>= 1:1.4.0-3)
 Standards-Version: 3.7.3
 
 Package: xserver-xfbdev
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 lpia m32r m68k mips mipsel powerpc ppc64 sh3 sh3eb sh4 sh4eb sparc
-Depends: ${shlibs:Depends}, ${misc:Depends}, libsha1, xkbcomp, xkb-data
+Depends: ${shlibs:Depends}, ${misc:Depends}, libsha1 (>= 0.2-3), xkbcomp, xkb-data
 Recommends: xbase-clients, xfonts-base
 Description: Linux framebuffer device tiny X server
  xserver-xfbdev is a Linux framebuffer device tiny X server based on the
